--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       </div>
       <div class="content__right">
         <div class="content__img">
-          <div class="grid wide">
+          <div class="grid">
             <div class="row">
               <div class="col l-3">
                 <div class="content__right-list">
