--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               <div class="swiper-slide"><p>Minecraft</p></div>
               <div class="swiper-slide"><p>Trò chơi</p></div>
               <div class="swiper-slide"><p>Rap</p></div>
-              <div class="swiper-slide"><p>Lửa chùa</p></div>
+              <div class="swiper-slide"><p>Giải trí</p></div>
               <div class="swiper-slide"><p>Genshin</p></div>
               <div class="swiper-slide"><p>Nấu ăn</p></div>
               <div class="swiper-slide"><p>Pubg</p></div>
