--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <title>Youtbue</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
+ 
     <link rel="shortcut icon" type="image" href="asset/icon.png">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="grid.css">
     <link rel="stylesheet" href="reponsive.css">
+    <link rel="stylesheet" href="srcollbar.css">
 </head>
 <body>
     <div class="header">
@@ -61,7 +63,7 @@
               <div class="swiper-slide"><p>Pubg</p></div>
               <div class="swiper-slide"><p>Đề xuất</p></div>
             </div>
-       
+            <i class="fas fa-play"></i>
           </div>
     </div>
   <div class="content__youtube">
@@ -155,6 +157,7 @@
 </div>
        </div>
      </div>
+   
             </div>
           </div>
         </div>
@@ -262,6 +265,104 @@
                </div>
              </div>
            </div>
+           <div class="col l-3 m-4 c-12">
+            <div class="content__right-list">
+             <img src="asset/tranform.png" alt="" srcset="">
+             <div class="content__right-list-txt">
+               <img src="asset/phephin.jpg" alt="" srcset="">
+               <div class="right__list-all-txt"> 
+               <p class="list__txt-heading"> Chuyện xãy ra với Transformers... </p>
+               <p class="list__txt-about">Phê phim <br> 153 N lượt xem . 15 giờ trước</p>
+               </div>
+              </div>
+            </div>
+          </div>
+          <div class="col l-3 m-4 c-12">
+           <div class="content__right-list">
+            <img src="asset/ricu2.png" alt="" srcset="">
+            <div class="content__right-list-txt">
+              <img src="asset/ricu.jpg" alt="" srcset="">
+              <div class="right__list-all-txt"> 
+              <p class="list__txt-heading">We dropped 100,000 ping...</p>
+              <p class="list__txt-about">How Ridiculous <br> 2.5 tr lượt xem . 2 tháng trước</p>
+              </div>
+             </div>
+           </div>
+         </div>
+         <div class="col l-3 m-4 c-12">
+           <div class="content__right-list">
+            <img src="asset/gearvn.png" alt="" srcset="">
+            <div class="content__right-list-txt">
+              <img src="asset/gearvn2.jpg" alt="" srcset="">
+              <div class="right__list-all-txt"> 
+              <p class="list__txt-heading">
+              Dùng nguồn càng cao sẽ tốn tiền điện? </p>
+              <p class="list__txt-about">GEARVN <br> 60 N lượt xem . 2 Năm trước</p>
+              </div>
+             </div>
+           </div>
+         </div>
+         <div class="col l-3 m-4 c-12">
+           <div class="content__right-list">
+            <img src="asset/kenjumboy.png" alt="" srcset="">
+            <div class="content__right-list-txt">
+              <img src="asset/kenjum.jpg" alt="" srcset="">
+              <div class="right__list-all-txt"> 
+              <p class="list__txt-heading">How to khen đúng cách </p>
+              <p class="list__txt-about">Kenjumboy <br> 120 N lượt xem . 16 giờ trước</p>
+              </div>
+             </div>
+           </div>
+         </div>
+         <div class="col l-3 m-4 c-12">
+          <div class="content__right-list">
+           <img src="asset/tranform.png" alt="" srcset="">
+           <div class="content__right-list-txt">
+             <img src="asset/phephin.jpg" alt="" srcset="">
+             <div class="right__list-all-txt"> 
+             <p class="list__txt-heading"> Chuyện xãy ra với Transformers... </p>
+             <p class="list__txt-about">Phê phim <br> 153 N lượt xem . 15 giờ trước</p>
+             </div>
+            </div>
+          </div>
+        </div>
+        <div class="col l-3 m-4 c-12">
+         <div class="content__right-list">
+          <img src="asset/ricu2.png" alt="" srcset="">
+          <div class="content__right-list-txt">
+            <img src="asset/ricu.jpg" alt="" srcset="">
+            <div class="right__list-all-txt"> 
+            <p class="list__txt-heading">We dropped 100,000 ping...</p>
+            <p class="list__txt-about">How Ridiculous <br> 2.5 tr lượt xem . 2 tháng trước</p>
+            </div>
+           </div>
+         </div>
+       </div>
+       <div class="col l-3 m-4 c-12">
+         <div class="content__right-list">
+          <img src="asset/gearvn.png" alt="" srcset="">
+          <div class="content__right-list-txt">
+            <img src="asset/gearvn2.jpg" alt="" srcset="">
+            <div class="right__list-all-txt"> 
+            <p class="list__txt-heading">
+            Dùng nguồn càng cao sẽ tốn tiền điện? </p>
+            <p class="list__txt-about">GEARVN <br> 60 N lượt xem . 2 Năm trước</p>
+            </div>
+           </div>
+         </div>
+       </div>
+       <div class="col l-3 m-4 c-12">
+         <div class="content__right-list">
+          <img src="asset/kenjumboy.png" alt="" srcset="">
+          <div class="content__right-list-txt">
+            <img src="asset/kenjum.jpg" alt="" srcset="">
+            <div class="right__list-all-txt"> 
+            <p class="list__txt-heading">How to khen đúng cách </p>
+            <p class="list__txt-about">Kenjumboy <br> 120 N lượt xem . 16 giờ trước</p>
+            </div>
+           </div>
+         </div>
+       </div>
             </div>
           </div>
         </div>
@@ -403,5 +504,6 @@
     }
     menu.addEventListener("click",changeValue4)
   </script>
+
 </body>
 </html>
