--- a/index.html
+++ b/index.html
@@ -267,98 +267,98 @@
            </div>
            <div class="col l-3 m-4 c-12">
             <div class="content__right-list">
-             <img src="asset/tranform.png" alt="" srcset="">
+             <img src="asset/reponsive.png" alt="" srcset="">
              <div class="content__right-list-txt">
-               <img src="asset/phephin.jpg" alt="" srcset="">
+               <img src="asset/repon2.jpg" alt="" srcset="">
                <div class="right__list-all-txt"> 
-               <p class="list__txt-heading"> Chuyện xãy ra với Transformers... </p>
-               <p class="list__txt-about">Phê phim <br> 153 N lượt xem . 15 giờ trước</p>
+               <p class="list__txt-heading"> Responsive navbar tutorial  using HTML CSS & js </p>
+               <p class="list__txt-about">Kevin Powell <br> 80 N lượt xem . 9 ngày trước</p>
                </div>
               </div>
             </div>
           </div>
           <div class="col l-3 m-4 c-12">
            <div class="content__right-list">
-            <img src="asset/ricu2.png" alt="" srcset="">
+            <img src="asset/anime.png" alt="" srcset="">
             <div class="content__right-list-txt">
-              <img src="asset/ricu.jpg" alt="" srcset="">
+              <img src="asset/mute.jpg" alt="" srcset="">
               <div class="right__list-all-txt"> 
-              <p class="list__txt-heading">We dropped 100,000 ping...</p>
-              <p class="list__txt-about">How Ridiculous <br> 2.5 tr lượt xem . 2 tháng trước</p>
+              <p class="list__txt-heading">Vua bánh mì-tập 7 [việt sub]</p>
+              <p class="list__txt-about">Muse Việt Nam<br> 18 N lượt xem . 16 giờ trước</p>
               </div>
              </div>
            </div>
          </div>
          <div class="col l-3 m-4 c-12">
            <div class="content__right-list">
-            <img src="asset/gearvn.png" alt="" srcset="">
+            <img src="asset/alan3.png" alt="" srcset="">
             <div class="content__right-list-txt">
-              <img src="asset/gearvn2.jpg" alt="" srcset="">
+              <img src="asset/alan2.jpg" alt="" srcset="">
               <div class="right__list-all-txt"> 
               <p class="list__txt-heading">
-              Dùng nguồn càng cao sẽ tốn tiền điện? </p>
-              <p class="list__txt-about">GEARVN <br> 60 N lượt xem . 2 Năm trước</p>
+              Alan Walker:unmasked Vlog </p>
+              <p class="list__txt-about">Alan Walker <br> 10 tr lượt xem . 3 Năm trước</p>
               </div>
              </div>
            </div>
          </div>
          <div class="col l-3 m-4 c-12">
            <div class="content__right-list">
-            <img src="asset/kenjumboy.png" alt="" srcset="">
+            <img src="asset/shangchi.png" alt="" srcset="">
             <div class="content__right-list-txt">
-              <img src="asset/kenjum.jpg" alt="" srcset="">
+              <img src="asset/phephin.jpg" alt="" srcset="">
               <div class="right__list-all-txt"> 
-              <p class="list__txt-heading">How to khen đúng cách </p>
-              <p class="list__txt-about">Kenjumboy <br> 120 N lượt xem . 16 giờ trước</p>
+              <p class="list__txt-heading">Shangchi giải thích:<br>chi tiết mà bạn bỏ qua </p>
+              <p class="list__txt-about">phephim <br> 34 N lượt xem . 1 giờ trước</p>
               </div>
              </div>
            </div>
          </div>
          <div class="col l-3 m-4 c-12">
           <div class="content__right-list">
-           <img src="asset/tranform.png" alt="" srcset="">
+           <img src="asset/edm.png" alt="" srcset="">
            <div class="content__right-list-txt">
-             <img src="asset/phephin.jpg" alt="" srcset="">
+             <img src="asset/edm2.jpg" alt="" srcset="">
              <div class="right__list-all-txt"> 
-             <p class="list__txt-heading"> Chuyện xãy ra với Transformers... </p>
-             <p class="list__txt-about">Phê phim <br> 153 N lượt xem . 15 giờ trước</p>
+             <p class="list__txt-heading">Top Nhạc EDM chơi game...</p>
+             <p class="list__txt-about">FURY EDM <br> 31 N lượt xem . 3 ngày trước</p>
              </div>
             </div>
           </div>
         </div>
         <div class="col l-3 m-4 c-12">
          <div class="content__right-list">
-          <img src="asset/ricu2.png" alt="" srcset="">
+          <img src="asset/ekko.png" alt="" srcset="">
           <div class="content__right-list-txt">
-            <img src="asset/ricu.jpg" alt="" srcset="">
+            <img src="asset/eko2.jpg" alt="" srcset="">
             <div class="right__list-all-txt"> 
-            <p class="list__txt-heading">We dropped 100,000 ping...</p>
-            <p class="list__txt-about">How Ridiculous <br> 2.5 tr lượt xem . 2 tháng trước</p>
+            <p class="list__txt-heading">Arcane Episode 7 | Vi reunites with Ekko</p>
+            <p class="list__txt-about">Meaning <br> 178 N lượt xem . 5 ngày trước</p>
             </div>
            </div>
          </div>
        </div>
        <div class="col l-3 m-4 c-12">
          <div class="content__right-list">
-          <img src="asset/gearvn.png" alt="" srcset="">
+          <img src="asset/tho.png" alt="" srcset="">
           <div class="content__right-list-txt">
-            <img src="asset/gearvn2.jpg" alt="" srcset="">
+            <img src="asset/tho2.jpg" alt="" srcset="">
             <div class="right__list-all-txt"> 
             <p class="list__txt-heading">
-            Dùng nguồn càng cao sẽ tốn tiền điện? </p>
-            <p class="list__txt-about">GEARVN <br> 60 N lượt xem . 2 Năm trước</p>
+           Thỏ bảy Màu vs Vịt - vòng bảng giải đấu... </p>
+            <p class="list__txt-about">QuaD Invisible <br> 16 N lượt xem . 3 tuần trước</p>
             </div>
            </div>
          </div>
        </div>
        <div class="col l-3 m-4 c-12">
          <div class="content__right-list">
-          <img src="asset/kenjumboy.png" alt="" srcset="">
+          <img src="asset/love.png" alt="" srcset="">
           <div class="content__right-list-txt">
-            <img src="asset/kenjum.jpg" alt="" srcset="">
+            <img src="asset/love2.jpg" alt="" srcset="">
             <div class="right__list-all-txt"> 
-            <p class="list__txt-heading">How to khen đúng cách </p>
-            <p class="list__txt-about">Kenjumboy <br> 120 N lượt xem . 16 giờ trước</p>
+            <p class="list__txt-heading">Loverboy -A-Wall... </p>
+            <p class="list__txt-about">JW Music <br> 1.2 tr lượt xem . 1 tháng trước</p>
             </div>
            </div>
          </div>
