--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
                     </div>
                     <div class="col l-2 m-5 c-12">
                       <ul class="header__list-icon">
-                          <li><i class="fas fa-video"></i></li>
-                          <li class="hide__2"><i class=" fas fa-ellipsis-v"></i></li>
-                          <li><i class="far fa-bell"></i></li>
+                          <li><i class="video fas fa-video"></i></li>
+                          <li class="hide__2"><i class="app fas fa-ellipsis-v"></i></li>
+                          <li><i class="nofi far fa-bell"></i></li>
                           <li class="hide"> <i class="hide fas fa-search"></i></li>
                           <li><img src="asset/unnamed.jpg" alt="" srcset=""></li>
                       </ul>
@@ -48,7 +48,7 @@
         </div>
         <div class="swiper mySwiper">
             <div class="swiper-wrapper">
-              <div class="swiper-slide"><p>Tất cả</p></div>
+              <div class="swiper-slide swiper-slide-2"><p>Tất cả</p></div>
               <div class="swiper-slide"><p>Danh sách</p></div>
               <div class="swiper-slide"><p>Âm nhạc</p></div>
               <div class="swiper-slide"><p>Hoạt hình</p></div>
@@ -157,7 +157,150 @@
 </div>
        </div>
      </div>
+     <div class="content__list-style-2 sub__list-5">
+      <div class="grid">
+        <div class="row">
+         <div class="col l-12">
+           <div class="content__list content__list-4 .content__list-6">
+             <p  class="sub__list sub__list-5 sub__list-6">Kênh đăng ký</p>
+           </div>
+     </div>
    
+     <div class="col l-2">
+       <div class="content__list content__list-5">
+         <p> <img src="asset/alan2.jpg" alt="" srcset=""> </p>
+       </div>
+ </div>
+ <div class="col l-10 changeheight">
+  <div class="content__list content__list-5">
+    <p class="sub__list sub__list-5">Alan Walker </p>
+  </div>
+ </div>
+ <div class="col l-2">
+   <div class="content__list">
+     <p> <img src="asset/kenjum.jpg" alt=""> </p>
+   </div>
+</div>
+<div class="col l-10">
+<div class="content__list">
+<p class="sub__list sub__list-5">Kenjumboy</p>
+</div>
+</div>
+<div class="col l-2">
+ <div class="content__list ">
+   <p><img src="asset/phephin.jpg" alt=""></p>
+ </div>
+</div>
+<div class="col l-10">
+<div class="content__list">
+<p class="sub__list   sub__list-5 ">phephim</p>
+</div>
+</div>
+<div class="col l-2">
+ <div class="content__list ">
+   <p><img src="asset/lol.jpg" alt=""></p>
+ </div>
+</div>
+<div class="col l-10">
+<div class="content__list">
+<p class="sub__list  sub__list-5">Lengue Of lengend</p>
+</div>
+</div>
+<div class="col l-2">
+  <div class="content__list ">
+    <p><img src="asset/mute.jpg" alt=""> </p>
+  </div>
+ </div>
+ <div class="col l-10">
+ <div class="content__list">
+ <p class="sub__list  sub__list-5">MuteVN</p>
+ </div>
+ </div>
+
+</div>
+      </div>
+    </div>
+        <div class="content__list-style-2 sub__list-5">
+       <div class="grid">
+         <div class="row">
+          <div class="col l-2">
+            <div class="content__list content__list-4">
+              <p><i class="fas fa-cog"></i> <br> <p class="sub__text">Thư viện</p></p>
+            </div>
+      </div>
+      <div class="col l-10">
+       <div class="content__list">
+         <p class="sub__list sub__list-4">Cài đặt</p>
+       </div>
+      </div>
+      <div class="col l-2">
+        <div class="content__list content__list-5">
+          <p><i class="far fa-question-circle"></i></p>
+        </div>
+  </div>
+  <div class="col l-10 changeheight">
+   <div class="content__list content__list-5">
+     <p class="sub__list sub__list-5">Trợ giúp</p>
+   </div>
+  </div>
+  <div class="col l-2">
+    <div class="content__list">
+      <p><i class="fas fa-flag"></i></p>
+    </div>
+</div>
+<div class="col l-10">
+<div class="content__list">
+ <p class="sub__list sub__list-5">Lịch cài đặt</p>
+</div>
+</div>
+<div class="col l-2">
+  <div class="content__list ">
+    <p><i class="fas fa-wrench"></i> </p>
+  </div>
+  
+</div>
+<div class="col l-10">
+<div class="content__list">
+<p class="sub__list   sub__list-5 ">Gửi phản hồi</p>
+</div>
+</div>
+<div class="col l-2">
+  <div class="content__list ">
+    <p> </p>
+  </div>
+  
+</div>
+<div class="col l-10">
+<div class="content__list">
+<p class="sub__list   sub__list-5 "></p>
+</div>
+</div>
+<div class="col l-2">
+  <div class="content__list ">
+    <p> </p>
+  </div>
+  
+</div>
+<div class="col l-10">
+<div class="content__list">
+<p class="sub__list   sub__list-5 "></p>
+</div>
+</div>
+<div class="col l-2">
+  <div class="content__list ">
+    <p> </p>
+  </div>
+  
+</div>
+<div class="col l-10">
+<div class="content__list">
+<p class="sub__list   sub__list-5 "></p>
+</div>
+</div>
+</div>
+       </div>
+     </div>
+  
             </div>
           </div>
         </div>
@@ -380,6 +523,209 @@
     <li class="change__position"><i class="fas fa-photo-video"></i><br> <p>Thư viện</p></li>
   </ul>
 </div>
+<div class="camera__content">
+  <div class="grid">
+    <div class="row">
+      <div class="col l-2 m-2 c-2">
+        <div class="camera__list">
+          <p><i class="fas fa-file-upload"></i><br></p>
+        </div>
+  </div>
+  <div class="col l-10 m-10 c-10">
+   <div class="camera__list ">
+     <p class="camera_list-info">Tải video lên</p>
+   </div>
+  </div>
+  <div class="col l-2 m-2 c-2">
+    <div class="camera__list">
+      <p><i class="wifi fas fa-wifi"></i> <br></p>
+    </div>
+</div>
+<div class="col l-10  m-10 c-10">
+<div class="camera__list ">
+  <p class="camera_list-info">Phát trực tiếp</p>
+</div>
+</div>
+    </div>
+  </div>
+</div>
+<div class="app__content">
+  <div class="app__section">
+    <div class="grid">
+      <div class="row">
+        <div class="col l-2">
+          <p> <img src="asset/Youtube_tv_new.png" alt=""> <br></p>
+        </div>
+        <div class="col l-10">
+          <p class="camera_app-info camera_app-info-2">Youtube Tv</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="app__section">
+    <div class="grid">
+      <div class="row">
+        <div class="col l-2 m-2 c-2">
+          <p> <img src="asset/unnamed.png" alt=""> <br></p>
+        </div>
+        <div class="col l-10 m-10 c-10">
+          <p class="camera_app-info camera_app-info-2">Youtube Music</p>
+        </div>
+        <div class="col l-2 m-2 c-2">
+          <p> <img src="asset/ytbkid.png" alt=""> <br></p>
+        </div>
+        <div class="col l-10  m-10 c-10">
+          <p class="camera_app-info camera_app-info-2">Youtube Kids</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="app__section app__section-2">
+    <div class="grid">
+      <div class="row">
+        <div class="col l-2 m-2 c-2">
+          <p> <img src="asset/icon.png" alt=""> <br></p>
+        </div>
+        <div class="col l-10   m-10 c-10">
+          <p class="camera_app-info camera_app-info-2">Học viện sáng tạo</p>
+        </div>
+        <div class="col l-2 m-2 c-2">
+          <p> <img src="asset/icon.png" alt=""> <br></p>
+        </div>
+        <div class="col l-10  m-10 c-10">
+          <p class="camera_app-info camera_app-info-2">Youbtube dành cho nghệ sĩ</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="nofiti__content">
+  <div class="nofiti__heading">
+    <div class="grid">
+      <div class="row">
+        <div class="col l-6 m-6 c-6">
+          <p class="nofiti__about">Thông báo</p>
+        </div>
+        <div class="col l-6 m-6 c-6">
+          <div class="notifi__setting">     <i class="fas fa-cog"></i></div>
+      
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="nofiti__list-content">
+    <div class="grid">
+      <div class="row">
+        <div class="col l-2 m-2 c-2">
+          <img class="nofiti__logo" src="asset/lol.jpg" alt="" srcset="">
+        </div>
+        <div class="col l-7 m-7 c-7">
+          <p class="nofi__list-about">League of Legends uploaded: Final Entry | Into the Arcane: Council Archives Trailer - League of Legends</p>
+          <p class="nofi__list-time">2 giờ trước</p>
+        </div>
+        <div class="col l-3 m-3 c-3">
+           <img class="nofiti__img" src="asset/nofiti.jpg" alt="">
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="nofiti__list-content">
+    <div class="grid">
+      <div class="row">
+        <div class="col l-2 m-2 c-2">
+          <img class="nofiti__logo" src="asset/lol.jpg" alt="" srcset="">
+        </div>
+        <div class="col l-7 m-7 c-7">
+          <p class="nofi__list-about">League of Legends uploaded: Final Entry | Into the Arcane: Council Archives Trailer - League of Legends</p>
+        </div>
+        <div class="col l-3 m-3 c-3">
+           <img class="nofiti__img" src="asset/nofiti.jpg" alt="">
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="nofiti__list-content">
+    <div class="grid">
+      <div class="row">
+        <div class="col l-2 m-2 c-2">
+          <img class="nofiti__logo" src="asset/lol.jpg" alt="" srcset="">
+        </div>
+        <div class="col l-7 m-7 c-7">
+          <p class="nofi__list-about">League of Legends uploaded: Final Entry | Into the Arcane: Council Archives Trailer - League of Legends</p>
+          <p class="nofi__list-time">2 giờ trước</p>
+        </div>
+        <div class="col l-3 m-3 c-3">
+           <img class="nofiti__img" src="asset/nofiti.jpg" alt="">
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="nofiti__list-content">
+    <div class="grid">
+      <div class="row">
+        <div class="col l-2 m-2 c-2">
+          <img class="nofiti__logo" src="asset/lol.jpg" alt="" srcset="">
+        </div>
+        <div class="col l-7 m-7 c-7">
+          <p class="nofi__list-about">League of Legends uploaded: Final Entry | Into the Arcane: Council Archives Trailer - League of Legends</p>
+          <p class="nofi__list-time">2 giờ trước</p>
+        </div>
+        <div class="col l-3 m-3 c-3">
+           <img class="nofiti__img" src="asset/nofiti.jpg" alt="">
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="nofiti__list-content">
+    <div class="grid">
+      <div class="row">
+        <div class="col l-2 m-2 c-2">
+          <img class="nofiti__logo" src="asset/lol.jpg" alt="" srcset="">
+        </div>
+        <div class="col l-7 m-7 c-7">
+         
+          <p class="nofi__list-about">League of Legends uploaded: Final Entry | Into the Arcane: Council Archives Trailer - League of Legends</p>
+          <p class="nofi__list-time">2 giờ trước</p>
+        </div>
+        <div class="col l-3 m-3 c-3">
+           <img class="nofiti__img" src="asset/nofiti.jpg" alt="">
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="nofiti__list-content">
+    <div class="grid">
+      <div class="row">
+        <div class="col l-2 m-2 c-2">
+          <img class="nofiti__logo" src="asset/lol.jpg" alt="" srcset="">
+        </div>
+        <div class="col l-7 m-7 c-7">
+          <p class="nofi__list-about">League of Legends uploaded: Final Entry | Into the Arcane: Council Archives Trailer - League of Legends</p>
+          <p class="nofi__list-time">2 giờ trước</p>
+        </div>
+        <div class="col l-3 m-3 c-3">
+           <img class="nofiti__img" src="asset/nofiti.jpg" alt="">
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="nofiti__list-content">
+    <div class="grid">
+      <div class="row">
+        <div class="col l-2 m-2 c-2">
+          <img class="nofiti__logo" src="asset/lol.jpg" alt="" srcset="">
+        </div>
+        <div class="col l-7 m-7 c-7">
+         <p class="nofi__list-about">League of Legends uploaded: Final Entry | Into the Arcane: Council Archives Trailer - League of Legends</p>
+         <p class="nofi__list-time">2 giờ trước</p>
+        </div>
+        <div class="col l-3 m-3 c-3">
+           <img class="nofiti__img" src="asset/nofiti.jpg" alt="">
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
   <!-- Initialize Swiper -->
@@ -504,6 +850,39 @@
     }
     menu.addEventListener("click",changeValue4)
   </script>
+<script>
+  video = document.querySelector(".video")
+  app = document.querySelector(".app")
+  camera = document.querySelector(".camera__content")
+  appytb = document.querySelector(".app__content")
+  content = document.querySelector(".content__youtube")
+  nofiti = document.querySelector(".nofiti__content")
+  nofi = document.querySelector(".nofi")
+  function opencamera(){
+    camera.classList.toggle("open3")
+    appytb.classList.remove("open5")
+    nofiti.classList.remove("open5")
+  }
+  function openapp(){
+     appytb.classList.toggle("open5")
+     camera.classList.remove("open3")
+     nofiti.classList.remove("open5")
+  }
+  function closeAll(){
+    camera.classList.remove("open3")
+    appytb.classList.remove("open5")
+    nofiti.classList.remove("open5")
+  }
+  function opennofi(){
+    nofiti.classList.toggle("open5")
+    camera.classList.remove("open3")
+    appytb.classList.remove("open5")
+  }
+  video.addEventListener("click",opencamera)
+  app.addEventListener('click',openapp)
+  content.addEventListener("click",closeAll)
+  nofi.addEventListener("click",opennofi)
+</script>
 
 </body>
 </html>
